feat: Change from application/yaml and multipart/form-data to handle application/json in routes
